# rill

./: .gitignore  AGENTS.md  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Examples.md  LICENSE-MIT  LICENSE.md  MANIFESTO.md  README.md  SECURITY.md  all_files_combined.txt  architecture.md  audio_num_migration_plan.md  clippy.toml  kama-signal_docs.sh  makeContext.sh  plan.org  rustfmt.toml
kama/: CMakeLists.txt  CMakeOptions.cmake
kama-automation/: Cargo.toml  context.rs
kama-automation/examples/: automation_demo.rs  basic_lfo.rs  custom_automaton.rs  lfo_with_envelope.rs  multiple_servos.rs
kama-automation/src/: context.rs  error.rs  integration.rs  lib.rs  manager.rs  parameter.rs  parameter_auto.rs  servo.rs  signal.rs
kama-automation/tests/: lfo_envelope_tests.rs  manager_tests.rs
kama-bufers/: Cargo.toml
kama-bufers/src/: lib.rs
kama-buffers/: Cargo.toml
kama-buffers/examples/: advanced_buffer_demo.rs  simple_granular.rs  test_multihead_buffer.rs
kama-buffers/src/: decorator.rs  error.rs  head.rs  lib.rs  manager.rs  multi_head.rs  pool.rs  processor.rs  registry.rs  ring.rs  simd.rs  view.rs
kama-buffers/tests/: compatibility_tests.rs  ring_buffer_tests.rs
kama-control/: Cargo.toml
kama-control/examples/: simple_midi.rs
kama-control/src/: backend.rs  engine.rs  error.rs  lib.rs  mapping.rs  node.rs
kama-control/tests/: test_mapping.rs
kama-core/: Cargo.toml
kama-core-dsp/: Cargo.toml
kama-core-dsp/examples/: vector_usage.rs
kama-core-dsp/src/: algorithm.rs  analyzer.rs  buffer.rs  context.rs  delay.rs  effect.rs  filter.rs  generator.rs  lib.rs  math.rs
kama-core-dsp/tests/: test_macros.rs  test_vector.rs
kama-core-traits/: Cargo.toml
kama-core-traits/src/: error.rs  lib.rs  node.rs  param.rs  time.rs
kama-core-traits/tests/: basic_tests.rs
kama-core/examples/: a.rs  basic_signals.rs  basic_traits.rs  final_demo.rs  final_dsp_demo.rs  test_complete_chain.rs  test_fixed_parallel.rs
kama-core/src/: error.rs  graph.rs  lib.rs  prelude.rs  utils.rs
kama-core/tests/: basic_tests.rs  signal_tests.rs  test_macros.rs  traits_tests.rs
kama-digital-effects/: Cargo.toml
kama-digital-effects/src/: delay.rs  distortion.rs  lib.rs  limiter.rs
kama-digital-effects/tests/: effects_tests.rs
kama-digital-filters/: Cargo.toml
kama-digital-filters/examples/: basic_filter.rs
kama-digital-filters/src/: biquad.rs  lib.rs
kama-digital-filters/tests/: biquad_tests.rs  biquad_tests.rs.backup
kama-dsp-common/: Cargo.toml
kama-dsp-common/examples/: basic_usage.rs
kama-dsp-common/src/: dummy.rs  filter.rs  lib.rs  macros.rs  simd.rs
kama-dsp-common/tests/: basic_tests.rs
kama-eq/: Cargo.toml
kama-eq/src/: band.rs  graphic.rs  lib.rs  node.rs  parametric.rs  utils.rs
kama-eq/tests/: eq_tests.rs
kama-graph/: Cargo.toml
kama-graph/examples/: mapping_node.rs
kama-graph/src/: connection.rs  error.rs  graph.rs  lib.rs  node.rs  processor.rs  registry.rs
kama-hp/: Cargo.toml
kama-hp/src/: analysis.rs  buffers.rs  converters.rs  effects.rs  filters.rs  lib.rs  oscillators.rs  simd.rs
kama-hp/tests/: integration_tests.rs
kama-io/: Cargo.toml
kama-io/examples/: alsa_demo.rs  granular_processing.rs  graph_processing.rs  null_demo.rs  processor_demo.rs  simple_playback.rs
kama-io/src/: backend.rs  config.rs  cpal.rs  engine.rs  error.rs  graph_processor.rs  lib.rs
kama-io/tests/: mocks.rs  test_backends.rs  test_graph_processor.rs  test_null_backend.rs  test_processors.rs
kama-lofi/: Cargo.toml  Readme.md
kama-lofi/examples/: ay38910_demo.rs  chiptune_demo.rs
kama-lofi/src/: config.rs  dsp.rs  error.rs  lib.rs  lofi_processor.rs  node_params.rs
kama-lofi/tests/: lofi_processor_tests.rs
kama-mixer/: Cargo.toml
kama-mixer/examples/: miexr_demo.rs
kama-mixer/lib/: lib.rs  preset.rs
kama-mixer/src/: bus.rs  buses.rs  channel.rs  dsp.rs  events.rs  filters.rs  lib.rs  mixer.rs  reactive.rs  routing.rs  send.rs
kama-mixer/tests/: mixer_tests.rs
kama-oscillators/: Cargo.toml
kama-oscillators/examples/: basic_osc.rs
kama-oscillators/src/: lib.rs
kama-patchbay/: Cargo.toml  lib.rs
kama-patchbay/examples/: basic_lfo.rs  custom_automaton.rs  lfo_with_envelope.rs  multiple_servos.rs
kama-patchbay/src/: context.rs  control.rs  integration.rs  lib.rs  manager.rs  parameter.rs  parameter_auto.rs  signal.rs
kama-patchbay/tests/: lfo_envelope_tests.rs  manager_tests.rs
kama-registry/: Cargo.toml
kama-registry/src/: error.rs  lib.rs  node.rs
kama-router/: Cargo.toml
kama-router/src/: lib.rs
kama-router/tests/: eq_tests.rs  mixer_tests.rs
kama-signal/: Cargo.toml
kama-signal/examples/: basic_signal_bus.rs  bus_with_policies.rs  multiple_signal_types.rs  signal_dispatcher.rs
kama-signal/src/: bus.rs  dispatcher.rs  error.rs  lib.rs  types.rs
kama-signal/tests/: distaptcher_tests.rs  signal_bus_tests.rs  threading_tests.rs
kama-tests/: Cargo.toml
kama-tests/tests/: digital_integration.rs
kama-wdf/: Cargo.toml
kama-wdf/examples/: analog_emulation_demo.rs
kama-wdf/src/: lib.rs  simd.rs
rill-adrift/: AGENTS.md  Cargo.toml  README.md
rill-adrift/benches/: lang_dsp_bench.rs
rill-adrift/examples/: advanced_player.rs  chiptune.rs  chiptune_stc.rs  chiptune_system.json  complex_dsl.rs  config.toml  convolver.rs  dsl_spectral.rs  graph.json  lang_chiptune.rs  midi_synth.rs  midi_synth_serial.rs  play_json.rs  play_wav.rs  player.rs  push_model.rs  record_mic.rs  spectral_effects.rs
rill-adrift/src/: lang_builtins.rs  lang_node.rs  lib.rs  registration.rs
rill-adrift/tests/: fft_integration.rs  graph_dsl_integration.rs  lang_builtins.rs  lang_builtins_stress.rs  lang_params.rs  lang_params_stress.rs  pull_model.rs  serialization.rs
rill-analog-effects/: Cargo.toml  README.md
rill-analog-effects/src/: cassette.rs  lang.rs  lib.rs  nodes.rs  op_amp.rs  register.rs  tape_bridge.rs
rill-analog-filters/: Cargo.toml  README.md
rill-analog-filters/src/: lib.rs  nodes.rs  (+1 more)
rill-analyzer/: Cargo.toml  README.md
rill-core-actor/: Cargo.toml  README.md
(+809 files in other folders)
