[workspace]
members = [
    "rill-core",
    "rill-core-actor",
    "rill-core-dsp",
    "rill-graph",
    "rill-patchbay",
    "rill-oscillators",
    "rill-digital-filters",
    "rill-digital-effects",
    "rill-telemetry",
    "rill-router",
    "rill-lofi",
    "rill-io",
"rill-core-model",
    "rill-analog-filters",
    "rill-analog-effects",
    "rill-osc",
    "rill-sampler",
    "rill-adrift",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
authors = ["Digital Rats / Rill Team"]
edition = "2021"
repository = "https://github.com/DigitalRats/rill"
documentation = "https://docs.rs/rill-adrift"
keywords = ["audio", "signal-processing", "dsp"]
categories = ["multimedia::audio", "science::robotics"]

[workspace.dependencies]
parking_lot = "0.12"
num-traits = "0.2"
thiserror = "1.0"
async-trait = "0.1"
serde = "1.0"
rand = "0.8"
log = "0.4"
tokio = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal workspace crates
rill-core = { path = "rill-core", version = "0.5.0-beta.7" }
rill-core-actor = { path = "rill-core-actor", version = "0.5.0-beta.7" }
rill-core-dsp = { path = "rill-core-dsp", version = "0.5.0-beta.7" }
rill-core-model = { path = "rill-core-model", version = "0.5.0-beta.7" }
rill-graph = { path = "rill-graph", version = "0.5.0-beta.7" }
rill-patchbay = { path = "rill-patchbay", version = "0.5.0-beta.7" }
rill-oscillators = { path = "rill-oscillators", version = "0.5.0-beta.7" }
rill-digital-filters = { path = "rill-digital-filters", version = "0.5.0-beta.7" }
rill-digital-effects = { path = "rill-digital-effects", version = "0.5.0-beta.7" }
rill-router = { path = "rill-router", version = "0.5.0-beta.7" }
rill-lofi = { path = "rill-lofi", version = "0.5.0-beta.7" }
rill-io = { path = "rill-io", version = "0.5.0-beta.7" }
rill-telemetry = { path = "rill-telemetry", version = "0.5.0-beta.7" }
rill-analog-filters = { path = "rill-analog-filters", version = "0.5.0-beta.7" }
rill-analog-effects = { path = "rill-analog-effects", version = "0.5.0-beta.7" }
rill-osc = { path = "rill-osc", version = "0.5.0-beta.7" }
rill-sampler = { path = "rill-sampler", version = "0.5.0-beta.7" }
rill-adrift = { path = "rill-adrift", version = "0.5.0-beta.7" }
