[workspace]
members = [
    "rill-core",
    "rill-core-actor",
    "rill-core-dsp",
    "rill-analyzer",
    "rill-graph",
    "rill-patchbay",
    "rill-digital-filters",
    "rill-digital-effects",
    "rill-telemetry",
    "rill-router",
    "rill-lofi",
    "rill-io",
"rill-core-model",
    "rill-analog-filters",
    "rill-analog-effects",
    "rill-osc",
    "rill-sampler",
    "rill-adrift",
    "rill-lang",
    "rill-fft",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
authors = ["Digital Rats / Rill Team"]
edition = "2021"
repository = "https://github.com/DigitalRats/rill"
documentation = "https://docs.rs/rill-adrift"
keywords = ["audio", "signal-processing", "dsp"]
categories = ["multimedia::audio", "science::robotics"]

[workspace.dependencies]
parking_lot = "0.12"
num-traits = "0.2"
thiserror = "1.0"
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
rand = "0.8"
log = "0.4"
tokio = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
glam = { version = "0.33", default-features = false, features = ["libm"] }

# Internal workspace crates
rill-core = { path = "rill-core", version = "0.6.0-M1" }
rill-core-actor = { path = "rill-core-actor", version = "0.6.0-M1" }
rill-core-dsp = { path = "rill-core-dsp", version = "0.6.0-M1" }
rill-core-model = { path = "rill-core-model", version = "0.6.0-M1" }
rill-graph = { path = "rill-graph", version = "0.6.0-M1" }
rill-patchbay = { path = "rill-patchbay", version = "0.6.0-M1" }
rill-digital-filters = { path = "rill-digital-filters", version = "0.6.0-M1" }
rill-digital-effects = { path = "rill-digital-effects", version = "0.6.0-M1" }
rill-router = { path = "rill-router", version = "0.6.0-M1" }
rill-lofi = { path = "rill-lofi", version = "0.6.0-M1" }
rill-io = { path = "rill-io", version = "0.6.0-M1" }
rill-telemetry = { path = "rill-telemetry", version = "0.6.0-M1" }
rill-analog-filters = { path = "rill-analog-filters", version = "0.6.0-M1" }
rill-analog-effects = { path = "rill-analog-effects", version = "0.6.0-M1" }
rill-osc = { path = "rill-osc", version = "0.6.0-M1" }
rill-sampler = { path = "rill-sampler", version = "0.6.0-M1" }
rill-adrift = { path = "rill-adrift", version = "0.6.0-M1" }
rill-lang = { path = "rill-lang", version = "0.6.0-M1" }
rill-fft = { path = "rill-fft", version = "0.6.0-M1" }
rill-analyzer = { path = "rill-analyzer", version = "0.6.0-M1" }
