[package]
name = "kama-automation"
version = "0.1.0"
edition = "2021"
description = "Advanced automation system for Kama Audio"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core-traits = { path = "../kama-core-traits", version = "0.1.0" }
kama-signal = { path = "../kama-signal", version = "0.1.0" }
kama-oscillators = { path = "../kama-oscillators", version = "0.1.0" }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
rand = "0.8"  # <-- добавляем

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
float-cmp = "0.9"  # для сравнения чисел с плавающей точкой

[[example]]
name = "basic_lfo"
path = "examples/basic_lfo.rs"

[[example]]
name = "lfo_with_envelope"
path = "examples/lfo_with_envelope.rs"

[[example]]
name = "multiple_servos"
path = "examples/multiple_servos.rs"

[[example]]
name = "custom_automaton"
path = "examples/custom_automaton.rs"