[package]
name = "kama-automation"
version = "0.3.0"  # Обновляем версию
edition = "2021"
description = "Advanced automation system for Kama Audio"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.3.0" }
kama-core-dsp = { path = "../kama-core-dsp", version = "0.3.0" }  # Добавляем
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
float-cmp = "0.9"