[package]
name = "kama-buffers"
version = "0.1.0"
edition = "2021"
description = "Universal buffer system for tape emulation, samplers, and granular synthesis"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core = { path = "../kama-core" }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
futures = "0.3"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
eframe = { version = "0.24", optional = true }
egui = { version = "0.24", optional = true }

[features]
default = []
gui = ["eframe", "egui"]
web = ["eframe/web"]