[package]
name = "kama-buffers"
version = "0.2.0"
edition = "2021"
description = "Advanced buffer management for Kama Audio"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core-traits = { path = "../kama-core-traits", version = "0.1.0" }
parking_lot = "0.12"
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]

[features]
default = []
simd = []