[package]
name = "kama-buffers"
version = "0.3.0"
edition = "2021"
description = "Advanced buffer management for Kama Audio - pure data structures"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
parking_lot = "0.12"
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
# Зависимости для тестов остаются, но kama-core больше не нужен
[features]
default = []
simd = []