[package]
name = "kama-control"
version = "0.1.0"
edition = "2021"
description = "Control backends for Kama Audio - MIDI, HID, OSC, Mackie"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core = { path = "../kama-core", version = "0.1.0" }
kama-core-traits = { path = "../kama-core-traits", version = "0.1.0" }
kama-automation = { path = "../kama-automation", version = "0.1.0", optional = true }
kama-signal = { path = "../kama-signal", version = "0.1.0" }
async-trait = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
log = "0.4"
crossbeam-channel = "0.5"
tokio = { version = "1.0", features = ["sync"] }

# MIDI
midir = { version = "0.9", optional = true }
midly = { version = "0.5", optional = true }

# HID
hidapi = { version = "2.4", optional = true }

# OSC
rosc = { version = "0.8", optional = true }

# Сериализация для preset'ов
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["midi"]

# Бэкенды
midi = ["dep:midir", "dep:midly"]
hid = ["dep:hidapi"]
osc = ["dep:rosc"]

# Все бэкенды
all-backends = ["midi", "hid", "osc"]

# Интеграция с автоматизацией
automation = ["kama-automation"]

# Сериализация
serde-config = ["dep:serde"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }