[package]
name = "kama-control"
version = "0.2.0"
edition = "2021"
description = "Control backends for Kama Audio - MIDI, HID, OSC, Mackie"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.3.0" }
kama-automation = { path = "../kama-automation", version = "0.2.0", optional = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
log = "0.4"
crossbeam-channel = "0.5"
tokio = { version = "1.0", features = ["sync"] }

# MIDI
midir = { version = "0.9", optional = true }
midly = { version = "0.5", optional = true }

# HID
hidapi = { version = "2.4", optional = true }

# OSC
rosc = { version = "0.8", optional = true }

# Сериализация для preset'ов
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["midi"]

# Бэкенды
midi = ["dep:midir", "dep:midly"]
hid = ["dep:hidapi"]
osc = ["dep:rosc"]

# Все бэкенды
all-backends = ["midi", "hid", "osc"]

# Интеграция с автоматизацией
automation = ["kama-automation"]

# Сериализация
serde-config = ["dep:serde"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }