[package]
name = "kama-control"
version = "0.3.0"
edition = "2021"
description = "Core mapping engine for control events in Kama Audio"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.3.0" }
thiserror = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
# Интеграция с графом (опционально)
graph = ["kama-core/traits"]