[package]
name = "kama-core-dsp"
version = "0.3.0"
edition = "2021"
description = "Core DSP abstractions and algorithms for Kama Audio"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.3.0" }

# Математические зависимости
num-traits = "0.2"
num-complex = "0.4"      # Для комплексных чисел в фильтрах
float-cmp = "0.9"        # Для сравнения чисел с плавающей точкой в тестах
thiserror = "1.0"

[dev-dependencies]
# Зависимости только для тестов
float-cmp = "0.9"        # Уже указано выше, но можно оставить для ясности

[features]
default = []
simd = []                # Для SIMD оптимизаций
f64 = []                 # Включить поддержку f64
fast_math = []           # Быстрые приближённые математические функции (меньшая точность)
unstable = []            # Нестабильные фичи (generic_const_exprs)