[package]
name = "kama-core-traits"
version = "0.1.0"
edition = "2021"
description = "Core traits for Kama Audio ecosystem"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
thiserror = { workspace = true }
parking_lot = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]