[package]
name = "kama-core"
version = "0.1.0"
edition = "2021"
description = "Core audio processing library for effects, synthesizers and sequencers"
license = "MIT OR Apache-2.0"

# Обязательные зависимости из workspace
[dependencies]
parking_lot = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

# Опциональные зависимости
crossbeam = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

# Аудио backend зависимости (опциональные)
pipewire = { version = "0.8", optional = true }
alsa = { version = "0.10", optional = true }
cpal = { version = "0.15", optional = true }

# Для MIDI
midir = { version = "0.9", optional = true }

# Для FFT и DSP
rustfft = { version = "6.1", optional = true }
realfft = { version = "3.3", optional = true }

# Для сигнальной системы
bincode = { version = "1.3", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []  # Пустой по умолчанию
simd = []
io = ["tokio", "cpal"]
midi = ["midir"]
dsp = ["rustfft", "realfft"]
signals = ["crossbeam", "futures"]
signals-json = ["serde_json"]
signals-bincode = ["bincode"]
pipewire-backend = ["io", "pipewire"]
alsa-backend = ["io", "alsa"]
full_demo = []

# Рекомендуемые фичи для большинства пользователей
[package.metadata]
recommended-features = ["io", "midi", "dsp"]


