[package]
name = "kama-digital-effects"
version = "0.2.0"
edition = "2021"
description = "Digital audio effects for Kama Audio - Delay, Distortion, Chorus, Reverb, etc."
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.3.0" }
kama-core-dsp = { path = "../kama-core-dsp" }
kama-oscillators = { path = "../kama-oscillators", optional = true }
thiserror = "1.0"

[features]
default = []
modulation = ["kama-oscillators"]  # для LFO в модуляционных эффектах

[dev-dependencies]
float-cmp = "0.9"