[package]
name = "kama-digital-filters"
version = "0.2.0"
edition = "2021"
description = "Digital filters for Kama Audio - Biquad, OnePole, StateVariable, etc."
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.2.0" }
kama-dsp-common = { path = "../kama-dsp-common" }
thiserror = "1.0"

[features]
default = []

[dev-dependencies]
float-cmp = "0.9"