[package]
name = "kama-digital-filters"
version = "0.3.0"
edition = "2021"
description = "Digital filters for Kama Audio - Biquad, OnePole, StateVariable, etc."
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.3.0" }
kama-core-dsp = { path = "../kama-core-dsp" }
thiserror = "1.0"

[features]
default = []

[dev-dependencies]
float-cmp = "0.9"