[package]
name = "kama-dsp-common"
version = "0.1.0"
edition = "2021"
description = "Common DSP utilities for Kama Audio ecosystem"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core-traits = { path = "../kama-core-traits", version = "0.1.0" }
kama-buffers = { path = "../kama-buffers", version = "0.2.0" }
parking_lot = "0.12"
thiserror = "1.0"

[features]
default = []
simd = []  # для SIMD оптимизаций