[package]
name = "kama-eq"
version = "0.1.0"
edition = "2021"
description = "Generic equalizer implementation for Kama Audio - works with any filter implementation"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core-traits = { path = "../kama-core-traits" }
kama-dsp-common = { path = "../kama-dsp-common" }
kama-signal = { path = "../kama-signal", optional = true }
thiserror = "1.0"

[features]
default = []
automation = ["kama-signal"]  # для автоматизации параметров

[dev-dependencies]
kama-digital-filters = { path = "../kama-digital-filters" }
kama-automation = { path = "../kama-automation" }
float-cmp = "0.9"