[package]
name = "kama-eq"
version = "0.2.0"
edition = "2021"
description = "Generic equalizer implementation for Kama Audio - works with any filter implementation"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.3.0" }
kama-core-dsp = { path = "../kama-core-dsp" }
thiserror = "1.0"

[features]
default = []

[dev-dependencies]
kama-digital-filters = { path = "../kama-digital-filters" }
# kama-automation = { path = "../kama-automation" }
float-cmp = "0.9"