[package]
name = "kama-graph"
version = "0.1.0"
edition = "2021"
description = "Audio graph implementation for Kama Audio"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core-traits = { path = "../kama-core-traits", version = "0.1.0" }
kama-buffers = { path = "../kama-buffers", version = "0.1.0" }
parking_lot = "0.12"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]