[package]
name = "kama-graph"
version = "0.1.0"
edition = "2021"
description = "Audio graph implementation for Kama Audio"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core-traits = { path = "../kama-core-traits", version = "0.1.0" }
kama-buffers = { path = "../kama-buffers", version = "0.2.0" }
kama-signal = { path = "../kama-signal", version = "0.1.0" }
parking_lot = "0.12"
thiserror = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]