[package]
name = "kama-hp"
version = "0.1.0"
edition = "2021"
description = "High-precision (f64) audio processing for demanding applications"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core-traits = { path = "../kama-core-traits", version = "0.1.0" }
kama-buffers = { path = "../kama-buffers", version = "0.2.0" }
parking_lot = { workspace = true }
rand = "0.8"
thiserror = "1.0"

[features]
default = []
simd = []

[dev-dependencies]
criterion = "0.5"