[package]
name = "kama-hp"
version = "0.2.0"
edition = "2021"
description = "High-precision (f64) audio processing for demanding applications"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.3.0" }
kama-buffers = { path = "../kama-buffers", version = "0.2.0" }
parking_lot = { workspace = true }
rand = "0.8"
thiserror = "1.0"

[features]
default = []
simd = []

[dev-dependencies]
criterion = "0.5"