[package]
name = "kama-io"
version = "0.2.0"
edition = "2021"
description = "Audio I/O backends for Kama Audio - CPAL, ALSA, PipeWire, JACK"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]
repository = "https://github.com/DigitalRats/kama-audio"
homepage = "https://github.com/DigitalRats/kama-audio"
readme = "README.md"

[dependencies]
kama-core = { path = "../kama-core", version = "0.3.0" }
kama-buffers = { path = "../kama-buffers", version = "0.2.0" }
kama-graph = { path = "../kama-graph", optional = true }
kama-oscillators = { path = "../kama-oscillators", optional = true }
kama-digital-effects = { path = "../kama-digital-effects", optional = true }
async-trait = "0.1"
thiserror = "1.0"
parking_lot = "0.12"
log = "0.4"
crossbeam-channel = "0.5"

# Бэкенды
cpal = { version = "0.15", optional = true }
alsa = { version = "0.9", optional = true }
pipewire = { version = "0.8", optional = true }
jack = { version = "0.10", optional = true }

# Для конфигурации
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
float-cmp = "0.9"
kama-oscillators = { path = "../kama-oscillators" }
kama-digital-filters = { path = "../kama-digital-filters" }

[features]
default = ["cpal"]

# Бэкенды
cpal = ["dep:cpal"]
alsa = ["dep:alsa"]
pipewire = ["dep:pipewire"]
jack = ["dep:jack"]
all-backends = ["cpal", "alsa", "pipewire", "jack"]

# Интеграция с графом
graph = ["kama-graph"]

# Для примеров
examples = ["kama-oscillators", "kama-digital-effects"]

# Сериализация конфигурации
serde-config = ["dep:serde"]

[[example]]
name = "simple_playback"
path = "examples/simple_playback.rs"
required-features = ["cpal", "alsa", "examples"]

[[example]]
name = "processor_demo"
path = "examples/processor_demo.rs"
required-features = ["cpal", "examples"]

[[example]]
name = "graph_processing"
path = "examples/graph_processing.rs"
required-features = ["graph", "examples"]

[[example]]
name = "granular_processing"
path = "examples/granular_processing.rs"
required-features = ["graph", "examples"]

[[example]]
name = "alsa_demo"
path = "examples/alsa_demo.rs"
required-features = ["alsa", "examples"]

[[example]]
name = "null_demo"
path = "examples/null_demo.rs"
required-features = ["examples"]