[package]
name = "kama-lofi"
version = "0.1.0"
edition = "2021"
description = "Lo-fi audio emulation: 8-bit, 12-bit, and classic digital audio systems"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core = { path = "../kama-core" }
kama-buffers = { path = "../kama-buffers", optional = true }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
rand = "0.8"
thiserror = "1.0"

[features]
default = []
buffers = ["kama-buffers"]
midi = []  # Для эмуляции MIDI-синтезаторов
tape = []  # Для комбинирования с tape saturation

[[example]]
name = "chiptune_demo"
required-features = []

#[[example]]
#name = "sampler_demo"
#required-features = ["buffers"]