[package]
name = "kama-lofi"
version = "0.2.0"
edition = "2021"
description = "Lo-fi audio emulation: 8-bit, 12-bit, NES, AY-3-8910, Akai S900"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.2.0" }
kama-buffers = { path = "../kama-buffers", version = "0.2.0" }
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }  # <-- убираем optional

[features]
default = []
buffers = []

[dev-dependencies]
serde_json = "1.0"