[package]
name = "kama-mixer"
version = "0.1.0"
edition = "2021"
description = "Audio mixer with channels, buses, and sends for Kama Audio"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core-traits = { path = "../kama-core-traits" }
kama-dsp-common = { path = "../kama-dsp-common" }
kama-buffers = { path = "../kama-buffers" }
kama-signal = { path = "../kama-signal", optional = true }
thiserror = "1.0"

[features]
default = []
automation = ["kama-signal"]  # для отправки сигналов при изменении параметров

[dev-dependencies]
kama-oscillators = { path = "../kama-oscillators" }
kama-digital-filters = { path = "../kama-digital-filters" }
float-cmp = "0.9"