[package]
name = "kama-mixer"
version = "0.2.0"
edition = "2021"
description = "Audio mixer with channels, buses, and sends for Kama Audio"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.2.0" }
kama-dsp-common = { path = "../kama-dsp-common" }
kama-buffers = { path = "../kama-buffers" }
thiserror = "1.0"

[features]
default = []

[dev-dependencies]
kama-oscillators = { path = "../kama-oscillators" }
kama-digital-filters = { path = "../kama-digital-filters" }
float-cmp = "0.9"