[package]
name = "kama-oscillators"
version = "0.3.0"
edition = "2021"
description = "Oscillators for Kama Audio - using kama-core-dsp algorithms"

[dependencies]
kama-core = { path = "../kama-core" }
kama-core-dsp = { path = "../kama-core-dsp" }
thiserror = "1.0"

[dev-dependencies]
float-cmp = "0.9"