[package]
name = "kama-registry"
version = "0.1.0"
edition = "2021"
description = "Node registry and factory for Kama Audio ecosystem"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core-traits = { path = "../kama-core-traits", version = "0.1.0" }
parking_lot = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
ctor = "0.2"
lazy_static = "1.4"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
kama-core = { path = "../kama-core" }