[package]
name = "kama-router"
version = "0.4.0"
edition = "2021"
description = "Audio routing, mixing, and equalization for Kama Audio"
license = "Apache-2.0"
authors = ["Digital Rats / Kama Audio Team"]

[dependencies]
kama-core = { path = "../kama-core", version = "0.3.0" }
kama-core-dsp = { path = "../kama-core-dsp", version = "0.3.0" }
thiserror = "1.0"

[features]
default = []

[dev-dependencies]
float-cmp = "0.9"
kama-digital-filters = { path = "../kama-digital-filters" }