[package]
name = "kama-signal"
version = "0.1.0"
edition = "2021"
description = "Signal bus system for Kama Audio"
license = "MIT OR Apache-2.0"

[dependencies]
crossbeam-channel = "0.5"
parking_lot = "0.12"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
# Для тестов нам не нужны дополнительные зависимости

[features]
default = []
serde = ["dep:serde"]