[package]
name = "kama-wdf"
version = "0.1.0"
edition = "2021"
description = "Wave Digital Filter implementation for analog circuit emulation"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core = { path = "../kama-core" }
kama-lofi = { path = "../kama-lofi", optional = true }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
nalgebra = { version = "0.32", features = ["sparse"] }  # Для матричных операций
num-complex = "0.4"  # Для комплексных чисел в анализе
ndarray = { version = "0.15", features = ["rayon"] }  # Для численных расчетов
rayon = "1.7"  # Параллельные вычисления

[dev-dependencies]
eframe = { version = "0.24", optional = true }
egui = { version = "0.24", optional = true }
plotly = { version = "0.8", optional = true }  # Для графиков Bode plot

[features]
default = []
gui = ["eframe", "egui", "plotly"]
lofi = ["kama-lofi"]  # Комбинация WDF + lo-fi
parallel = ["rayon"]  # Параллельные вычисления

