[package]
name = "kama-wdf"
version = "0.1.0"
edition = "2021"
description = "Wave Digital Filter implementation for analog circuit emulation"
license = "MIT OR Apache-2.0"

[dependencies]
kama-core = { path = "../kama-core" }
kama-lofi = { path = "../kama-lofi", optional = true }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
nalgebra = { version = "0.32", features = ["sparse"] }
num-complex = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = { version = "1.7", optional = true }  # ← КЛЮЧЕВОЕ ИЗМЕНЕНИЕ: добавили optional = true

[dev-dependencies]
eframe = { version = "0.24" }
egui = { version = "0.24" }
plotly = { version = "0.8" }

[features]
default = []
lofi = ["kama-lofi"]  # Комбинация WDF + lo-fi
parallel = ["rayon"]  # Теперь rayon - опциональная зависимость